<resources>
    <string name="app_name">Horoskopos</string>
    <string name="appSlogan">Horoscopes at your fingertips.</string>
    <string name="tvEmail">Email</string>
    <string name="tvPW">Password</string>
    <string name="tvPWInfo">(Must contain at least six characters)</string>
    <string name="tvPWR">Password</string>
    <string name="tvCPW">Confirm Password</string>
    <string name="tvFPW">Forgot Password?</string>
    <string name="tvRPW">Reset Password?</string>
    <string name="tvRPWInfo">Enter your email to reset password.</string>
    <string name="tvLogin">Login</string>
    <string name="tvNoAcc">Don\'t have an account? Register Here.</string>
    <string name="tvAcc">Have an account? Log in.</string>
    <string name="tvRegister">Register</string>
    <string name="tvRemember">Remember Me</string>
    <string name="tvCH">Select your horoscope</string>
    <string name="tvCAH">Select a horoscope</string>
    <string name="tvCZ">Select your zodiac</string>
    <string name="tvCAZ">Select a zodiac</string>
    <string name="tvCHInfo">You may change your horoscope later on if you wish.</string>
    <string name="tvCZInfo">You may change your horoscope and zodiac later on if you wish.</string>
    <string name="tvOverviewY">2021 Overview</string>
    <string name="openDrawer">open</string>
    <string name="closeDrawer">close</string>
    <string name="yrHP">Your horoscope prediction</string>
    <string name="yrZF">Your zodiac forecast</string>
    <string name="HC">Horoscope Compatibility</string>
    <string name="ZC">Zodiac Compatibility</string>
    <string name="Overall">Overall: </string>
    <string name="Wealth">Wealth: </string>
    <string name="Career">Career: </string>
    <string name="Health">Health: </string>
    <string name="Love">Love: </string>
    <string name="Discover">Discover</string>
    <string name="CZ">Chinese Zodiac</string>
    <string name="H">Horoscopes</string>
    <string name="Calculate">Calculate</string>
    <string name="General">General</string>
    <string name="Astrology">Astrology</string>
    <string name="ChangeH">Change horoscope</string>
    <string name="ChangeZ">Change zodiac</string>
    <string name="ChangePW">Change password</string>
    <string name="ChangeEmail">Change email</string>
    <string name="Notifications">Notifications</string>
    <string name="ENotifications">Enable Notifications</string>
    <string name="NotificationsD">Show notifications regarding your monthly readings on the specified day of the month.</string>
    <string name="tvDOM">Day of Month</string>
    <string name="tvTOD">Time of Day</string>
    <string name="LG">Log Out</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>