<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".HomeFragment"
    android:padding="8dp"
    android:background="#F3F3F3">

            <TextView
                android:id="@+id/tvGreetingHome"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:textColor="#303841"
                android:textSize="28sp" />

            <Button
                android:id="@+id/btnYH"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_marginBottom="15dp"
                android:background="@drawable/rounded_button"
                android:gravity="left|center_vertical"
                android:padding="5dp"
                android:text="@string/yrHP"
                android:textSize="18sp"
                app:backgroundTint="#303841" />

            <Button
                android:id="@+id/btnYCZ"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/rounded_button"
                android:gravity="left|center_vertical"
                android:padding="5dp"
                android:text="@string/yrZF"
                android:textSize="18sp"
                app:backgroundTint="#303841" />

            <TextView
                android:id="@+id/tvDiscover"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:text="@string/Discover"
                android:textColor="#303841"
                android:textSize="28sp" />
            <Button
                android:id="@+id/btnCC"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_marginBottom="15dp"
                android:background="@drawable/rounded_button"
                android:drawableLeft="@drawable/ic_baseline_people_24"
                android:gravity="left|center_vertical"
                android:padding="5dp"
                android:text="@string/HC"
                android:textSize="18sp"
                app:backgroundTint="#303841" />

            <Button
                android:id="@+id/btnZC"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:background="@drawable/rounded_button"
                android:drawableLeft="@drawable/zc"
                android:gravity="left|center_vertical"
                android:padding="5dp"
                android:text="@string/ZC"
                android:textSize="18sp"
                app:backgroundTint="#303841" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#F3F3F3"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btnCZ"
                    android:layout_width="160dp"
                    android:layout_height="112dp"
                    android:layout_marginRight="70dp"
                    android:background="@drawable/rounded_button"
                    android:drawableTop="@drawable/zodiac"
                    android:text="@string/CZ"
                    android:textSize="16sp"
                    app:backgroundTint="#303841" />

                <Button
                    android:id="@+id/btnH"
                    android:layout_width="160dp"
                    android:layout_height="112dp"
                    android:layout_marginTop="16.2dp"
                    android:background="@drawable/rounded_button"
                    android:drawableTop="@drawable/sun"
                    android:text="@string/H"
                    android:textSize="16sp"
                    app:backgroundTint="#303841" />
            </LinearLayout>

</LinearLayout>