<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ZodiacCompatibilityFragment"
    android:padding="5dp">



    <Button
        android:id="@+id/btnFZ"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginTop="80dp"
        android:layout_marginBottom="25dp"
        android:backgroundTint="#BFBFBF"
        android:padding="18dp"
        android:text="@string/tvCZ"
        android:textSize="18sp" />


    <ImageView
        android:id="@+id/plusIcon"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_marginBottom="25dp"
        android:src="@drawable/ic_baseline_add_24" />

    <Button
        android:id="@+id/btnSZ"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginBottom="75dp"
        android:backgroundTint="#BFBFBF"
        android:padding="18dp"
        android:text="@string/tvCAZ"
        android:textSize="18sp" />


    <Button
        android:id="@+id/btnCalculateZC"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Calculate"
        android:textSize="18sp"
        android:backgroundTint="#303841"/>


</LinearLayout>