<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F3F3F3"
    android:orientation="vertical"
    tools:context=".RegisterScreen">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="match_parent"
                    android:layout_height="180dp"
                    app:srcCompat="@drawable/logor" />

                <TextView
                    android:id="@+id/tvAppName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/app_name"
                    android:textColor="#303841"
                    android:textSize="50sp" />

                <TextView
                    android:id="@+id/tvSlogan"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dp"
                    android:gravity="center"
                    android:text="@string/appSlogan"
                    android:textColor="#303841"
                    android:textSize="18sp" />

                <LinearLayout
                    android:id="@+id/emailLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tvEmail"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/crimson_text"
                        android:text="@string/tvEmail"
                        android:textColor="#303841"
                        android:textSize="24sp" />

                    <EditText
                        android:id="@+id/editEmailR"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:fontFamily="@font/crimson_text"
                        android:inputType="textPersonName"
                        android:textSize="24sp" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/pwLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dp"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/tvPW"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="10dp"
                            android:layout_marginRight="10dp"
                            android:text="@string/tvPWR"
                            android:textColor="#303841"
                            android:textSize="24sp" />

                        <TextView
                            android:id="@+id/tvPWInfo"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/tvPWInfo"
                            android:textColor="#303841"
                            android:textSize="16sp" />
                    </LinearLayout>

                    <EditText
                        android:id="@+id/editPasswordR"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:inputType="textPassword"
                        android:textSize="24sp" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/cpwLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tvCPW"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/tvCPW"
                        android:textColor="#303841"
                        android:textSize="24sp" />

                    <EditText
                        android:id="@+id/editCPW"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:inputType="textPassword"
                        android:text="147258"
                        android:textSize="24sp" />
                </LinearLayout>

                <Button
                    android:id="@+id/btnRegister"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/tvRegister"
                    android:textSize="24sp"
                    app:backgroundTint="#303841"
                    android:layout_marginBottom="20dp"/>

                <TextView
                    android:id="@+id/tvAcc"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/tvAcc"
                    android:textColor="#303841"
                    android:textSize="20sp"
                    android:layout_marginBottom="20dp"/>


            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>